feat(docker-compose): dockerize app

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,18 +1,22 @@
+# Read file on Config Server
+# .properties or .yml file on config server
+# local, dev
+spring.profiles.active = local
 spring.application.name = redis-example
-server.port = 8081
+server.port = ${SERVER_PORT:8081}
 
 # Datasource Settings
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/redis-example-db?currentSchema=redis-example
-spring.datasource.username = admin
-spring.datasource.password = admin
+spring.datasource.url = ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/redis-example-db?currentSchema=redis-example}
+spring.datasource.username = ${SPRING_DATASOURCE_USERNAME:admin}
+spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD:admin}
 
 # Hikari Connection Pool Settings
-spring.datasource.hikari.schema = redis-example
+spring.datasource.hikari.schema = ${SPRING_DATASOURCE_HIKARI_SCHEMA:redis-example}
 spring.datasource.hikari.minimumIdle = 5
 spring.datasource.hikari.maximumPoolSize = 20
 spring.datasource.hikari.idleTimeout = 30000
-spring.datasource.hikari.poolName = RedisExampleJPAHikariCP
+spring.datasource.hikari.poolName = ${SPRING_DATASOURCE_HIKARI_POOL_NAME:ReisExampleJPAHikariCP}
 spring.datasource.hikari.maxLifetime = 2000000
 spring.datasource.hikari.connectionTimeout = 30000
 
@@ -26,16 +30,16 @@ logging.level.org.hibernate.SQL = DEBUG
 
 # Flyway Settings
 spring.flyway.enabled = true
-spring.flyway.url = jdbc:postgresql://localhost:5432/redis-example-db
-spring.flyway.user = admin
-spring.flyway.password = admin
-spring.flyway.schemas = redis-example
+spring.flyway.url = ${SPRING_FLYWAY_URL:jdbc:postgresql://localhost:5432/redis-example-db}
+spring.flyway.user = ${SPRING_FLYWAY_USER:admin}
+spring.flyway.password = ${SPRING_FLYWAY_PASSWORD:admin}
+spring.flyway.schemas = ${SPRING_FLYWAY_SCHEMAS:redis-example}
 spring.flyway.baseline-on-migrate = true
 
 # Redis Settings
-spring.data.redis.host = localhost
-spring.data.redis.port = 6379
-spring.data.redis.password = admin
+spring.data.redis.host = {REDIS_HOST:localhost}
+spring.data.redis.port = {REDIS_PORT:6379}
+spring.data.redis.password = {REDIS_PASSWORD:admin}
 
 # Actuator Settings
 management.server.port = 8081
@@ -45,5 +49,3 @@ management.endpoint.health.show-details = always
 management.endpoint.caches.enabled = true
 management.info.env.enabled = true
 management.info.java.enabled = true
-
-
